--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 	"description": "The root and a fork of the simple modern and intuitive unit testing framework for PHP 5.3+",
 	"keywords": ["TDD","atoum","test","unit testing"],
 	"homepage": "http://www.atoum.org",
-	"license": "BSD",
+	"license": "BSD-2-Clause",
 	"authors":
 	[
 		{
